library-valcon-internship/src/components/BookCard/BookCard.css
.book-card {
  display: flex;
  flex-flow: column;
  max-width: 500px;
  width: 380px;
  min-width: 200px;
  height: 600px;
  max-height: 600px;
  padding-block: 0px;
  padding-inline: 12px;
  border: 1px solid black;
  border-radius: 15px;
  color: white;
  background-color: #444;
  box-shadow: 5px 0 20px 2px #666;
  transition: box-shadow 0.2s ease-in-out, opacity 0.2s ease-in-out;
  justify-content: space-evenly;
  cursor: pointer;
  gap: 2px;
}

.book-card:active {
  opacity: 0.8;
  box-shadow: 0 0 30px 30px #666;
  transition: box-shadow 0.2s ease-in-out, opacity 0.2s ease-in-out;
}

.book-card:hover {
  opacity: 0.8;
  box-shadow: 0 0 30px 30px #666;
  transition: box-shadow 0.2s ease-in-out, opacity 0.2s ease-in-out;
}

.book-card-cover {
  width: 100%;
  object-fit: cover;
  align-self: center;
  aspect-ratio: 4 / 3;
}

.book-card-title {
  display: flex;
  justify-content: center;
  align-items: center;
  font-variant: small-caps;
}

.book-card-description {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 18px;
}

.book-card-info {
  display: flex;
  justify-content: space-around;
  align-items: center
}

.book-card-info-title {
  width: 100%;
  align-self: center;
}

.book-card-info-content {
  width: 100%;
  text-align: right;
  align-self: center;
}

.book-card-info-content--hide {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.book-card-title--hide {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.book-card-description--hide {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.book-card-btns {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.book-card-btn {
  border-radius: 8px;
  color: white;
  padding-block: 8px;
  padding-inline: 15px;
  text-align: center;
  max-width: 100px;
  min-width: 80px;
  font-size: 16px;
}

.delete-btn {
  background-color: red;
}

.edit-btn {
  background-color: rgb(199, 149, 10);
}

.edit-btn--mobile {
  display: none;
}

.book-card-content {
  margin: unset;
}

@media (max-width: 400px) {
  .book-card {
    justify-content: unset;
    margin: unset;
    width: 100%;
    height: 400px;
    max-height: 400px;
    margin-bottom: 2rem;
    gap: 15px;
  }

  .edit-btn--mobile {
    display: unset;
  }

  .edit-btn--desktop {
    display: none;
  }
}

